WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308197
media-source-audio-switch.html is an intermittent failure
https://bugs.webkit.org/show_bug.cgi?id=308197
Summary
media-source-audio-switch.html is an intermittent failure
Jean-Yves Avenard [:jya]
Reported
2026-02-18 21:00:43 PST
https://ews-build.s3-us-west-2.amazonaws.com/macOS-Tahoe-Debug-WK2-Tests-EWS/4b4c81c7-15082/media/media-source/media-source-audio-switch-diff.txt
``` --- /Volumes/Data/worker/macOS-Tahoe-Debug-WK2-Tests-EWS/build/layout-test-results/media/media-source/media-source-audio-switch-expected.txt +++ /Volumes/Data/worker/macOS-Tahoe-Debug-WK2-Tests-EWS/build/layout-test-results/media/media-source/media-source-audio-switch-actual.txt @@ -22,6 +22,8 @@ RUN(video.play()) EXPECTED (video.paused == 'false') OK -EXPECTED (video.currentTime >= '5') OK +oldTime 4.100137436 +video.currentTime 4.013645766 +oldTime <= video.currentTime FAIL END OF TEST ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-18 21:00:50 PST
<
rdar://problem/170694716
>
Jean-Yves Avenard [:jya]
Comment 2
2026-02-18 21:03:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58981
EWS
Comment 3
2026-02-19 14:53:40 PST
Committed
307856@main
(f0f1cd07d62a): <
https://commits.webkit.org/307856@main
> Reviewed commits have been landed. Closing PR #58981 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug