media-source-audio-switch.html is an intermittent failure https://bugs.webkit.org/show_bug.cgi?id=308197 rdar://170694716

Reviewed by Jer Noble.

When the test does pause() → remove(0, 15) → append() → play(),
the AVSampleBufferRenderSynchronizer can briefly report a time slightly earlier
than the pause time during playback resumption due to timing jitter.
This caused video.currentTime to appear to go backwards.

In pause(), we now capture the current time and update m_lastSeekTime if
it's greater than the existing value. Since currentTime() already clamps
the returned time to m_lastSeekTime, this ensures time cannot go backwards after a pause/resume cycle.

Covered by existing test.

* Source/WebCore/platform/graphics/avfoundation/AudioVideoRendererAVFObjC.mm:
(WebCore::AudioVideoRendererAVFObjC::pause):

Canonical link: https://commits.webkit.org/307856@main